--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack -p",
-    "start": "webpack-dev-server --https"
+    "start": "webpack-dev-server --https",
+    "proxy": "node ./src/proxy.js",
+    "start:proxy": "concurrently npm:proxy npm:start"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -16,11 +18,14 @@
     "@babel/preset-env": "^7.8.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "concurrently": "^5.1.0",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
+    "express": "^4.17.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.20.0",
     "node-sass": "^4.13.1",
     "rimraf": "^3.0.1",
     "sass-loader": "^8.0.2",
