--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,10 @@
 {
   "env": { "es6": true, "browser": true, "node": true },
-  "extends": "eslint:recommended",
+  "extends": "plugin:prettier/recommended",
   "parser": "babel-eslint",
   "parserOptions": { "ecmaVersion": 6, "sourceType": "module" },
   "rules": {
+    "prettier/prettier": "error",
     "no-cond-assign": 0
   }
 }
