--- a/package.json
+++ b/package.json
@@ -22,17 +22,24 @@
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.20.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "4.14.1",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "ts-loader": "^7.0.5",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "^3.9.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.2"
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
