--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,16 @@
 {
   "env": { "es6": true, "browser": true, "node": true },
-  "extends": "plugin:prettier/recommended",
-  "parser": "babel-eslint",
-  "parserOptions": { "ecmaVersion": 6, "sourceType": "module" },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "no-cond-assign": 0
