--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Antti Pekka Vilkko <apvilkko@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --env production",
     "start": "webpack serve --https",
     "proxy": "node ./src/proxy.js",
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-loader": "^8.2.2",
@@ -29,6 +31,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "http-proxy-middleware": "^0.20.0",
+    "jest": "^29.4.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.1",
     "sass": "^1.32.11",
