--- a/package.json
+++ b/package.json
@@ -1,50 +1,14 @@
 {
   "name": "biitit",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "git@github.com:apvilkko/biitit.git",
-  "author": "Antti Pekka Vilkko <apvilkko@gmail.com>",
-  "license": "MIT",
   "scripts": {
-    "test": "jest",
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack --env production",
-    "start": "webpack serve --https",
-    "proxy": "node ./src/proxy.js",
-    "start:proxy": "concurrently npm:proxy npm:start"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^29.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "babel-loader": "^8.2.2",
-    "concurrently": "^5.1.0",
-    "cross-env": "^7.0.0",
-    "css-loader": "^5.2.4",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "express": "^4.17.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "http-proxy-middleware": "^0.20.0",
-    "jest": "^29.4.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.1",
-    "sass": "^1.32.11",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4",
-    "webpack": "^5.36.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "3.11.2"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.8.3",
-    "seedrandom": "^3.0.5"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
